--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Redux TodoMVC example</title>
   </head>
+
   <body>
     <div class="todoapp" id="root">
     </div>
-    <script src="/dist/bundle.js"></script>
+    <script src="/static/bundle.js"></script>
   </body>
 </html>
